# free-genai-bootcamp-2025

./: README.md  pyproject.toml
2. lang-portal/: .gitignore  Makefile  test_api.sh
2. lang-portal/backend_python/: alembic.ini  pyproject.toml
2. lang-portal/backend_python/alembic/: env.py
2. lang-portal/backend_python/data/seeds/: groups.csv  study_activities.csv  word_groups.csv  words.csv
2. lang-portal/backend_python/src/language_learning_api/: __init__.py  main.py
2. lang-portal/backend_python/src/language_learning_api/api/: __init__.py
2. lang-portal/backend_python/src/language_learning_api/api/v1/: __init__.py  api.py
2. lang-portal/backend_python/src/language_learning_api/api/v1/endpoints/: __init__.py  groups.py  study_sessions.py  words.py
2. lang-portal/backend_python/src/language_learning_api/db/: __init__.py  session.py  utils.py
2. lang-portal/backend_python/src/language_learning_api/db/crud/: __init__.py  base.py  group.py  study_session.py  word.py  word_review.py
2. lang-portal/backend_python/src/language_learning_api/db/seeds/: __init__.py  seed.py  study_activities.csv  words.csv
2. lang-portal/backend_python/src/language_learning_api/models/: __init__.py  group.py  study_activity.py  study_session.py  word.py  word_group.py  word_review.py
2. lang-portal/backend_python/src/language_learning_api/schemas/: __init__.py  group.py  pagination.py  study_session.py  word.py  word_review.py
3. OPEA-comps/: .env.sample  docker-compose.yml  pyproject.toml
architecture/: llm-conceptual-diagram.excalidraw
(+15 files in other folders)
