[project]
name = "language-learning-api"
version = "0.1.0"
description = "Language Learning API with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "ruff>=0.9.6",
    "pytest>=8.3.4",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "aiosqlite>=0.21.0",
]
